@@ -1,6 +1,7 @@
 --------------------------
 Changes in 1.9 (not yet released)
 
+- Add _IRR_COMPILE_WITH_XML_ define to allow compiling Irrlicht without xml (patch written by curaga)
 - Add functions to set/get cursor character and blinktime to IGUIEditBox
 - Collada exporter calculates values for orthographic camera now on export
 - Collada exporter now exports the camera up-vector correctly.
